--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -33,6 +33,7 @@
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
     <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
     <add key="WebSite" value="http://i7751-app127:8095/"/>
+    <add key="ServiceGetOrPost" value="http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais"/> <!--Адрес сервиса-->
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
