--- a/EfDatabaseAutomation/EfDatabaseAutomation.csproj
+++ b/EfDatabaseAutomation/EfDatabaseAutomation.csproj
@@ -41,6 +41,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>C:\Nuget\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>C:\Nuget\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -53,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Automation\BaseLogica\AddObjectDb\AddObjectDb.cs" />
+    <Compile Include="Automation\BaseLogica\PreCheck\PreCheckAddObject.cs" />
+    <Compile Include="Automation\BaseLogica\SqlSelect\PreCheckLog\SqlPreCheckLog.cs" />
     <Compile Include="Automation\BaseLogica\SqlSelect\ProcedureParametr\SqlSelect.cs" />
     <Compile Include="Automation\BaseLogica\SqlSelect\SelectAll\SelectAll.cs" />
     <Compile Include="Automation\BaseLogica\XsdAuto\Okp2\ShemeTaxJournal\WebShemeTaxJournal.cs">
