--- a/LibaryAIS3Windows.Tests/app.config
+++ b/LibaryAIS3Windows.Tests/app.config
@@ -1,11 +1,86 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+  </configSections>
+  <connectionStrings>
+    <add name="SQL" connectionString="Data Source=i7751-app001;Initial Catalog=Taxes51;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="Ifns" value="7751" />
+    <!--ИФНС для выборок-->
+    <add key="Help" value="Help\AutomateAis3Full.pdf" />
+    <!--Помощь пользователю-->
+    <add key="ServiceAndIpComputer" value="ServiceTestIfns,localhost" />
+    <add key="ServerReport" value="http://localhost:8181/ServiceRest/MigrationError" />
+    <!--Сервер создания отчетов по миграции Письма-->
+    <add key="ServerRuleUsersWordTemplate" value="http://localhost:8181/ServiceRest/GenerateTemplateRule" />
+    <!--Сервис создания заявок доступа на подпись-->
+    <add key="FileFid" value="XmlFile/Fid.xml" />
+    <!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
+    <add key="FileInn" value="XmlFile/Inn.xml" />
+    <!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
+    <add key="FileFpd" value="XmlFile/Fpd.xml" />
+    <!--Путь к файлу ФПД по схеме FpdReg.xsd-->
+    <add key="FileInnFull" value="XmlFile/InnFull.xml" />
+    <!--Путь к файлу массовых ИНН по схеме FullInnCount.xsd-->
+    <add key="IdZaprosVisual" value="XmlFile/IdZaprosVisual.xml" />
+    <!--Путь к файлу для визуальной идентификации-->
+    <add key="FidFace" value="XmlFile/FidFace.xml" />
+    <!--Файл с фидами для регистрации-->
+    <add key="FileJurnalError" value="XmlJurnal/InnError.xml" />
+    <!--Путь к файлу Журналу ошибок по схеме ErrorJurnal.xsd-->
+    <add key="FileJurnalOk" value="XmlJurnal/InnOk.xml" />
+    <!--Путь к файлу Журналу отрабтаных по схеме OkJurnal.xsd-->
+    <add key="ReportMigration" value="XmlJurnal/ReportMigration.xml" />
+    <!--Журнал миграции по схеме ReportMigration.xsd-->
+    <add key="UserRule" value="XmlJurnal/UserRule.xml" />
+    <!--Журнал миграции по схеме UserRule.xsd-->
+    <add key="FileSpisok" value="FormXml/" />
+    <!--Папка для формирование -->
+    <add key="PathJurnal" value="XmlJurnal/" />
+    <!--Путь к журналам-->
+    <add key="PathInn" value="XmlFile/" />
+    <!--Путь к спискам значений-->
+    <add key="ExcelReportFile" value="ExcelReport/" />
+    <!--Путь к конвертированым отчетам!!!-->
+    <add key="PathPdfTemp" value="C:/Users/7751-00-450/AppData/Local/Temp/" />
+    <!--Путь к PDF файлам!!!-->
+    <add key="PathPdfWork" value="PdfReport/" />
+    <!--Путь к PDF файлам!!!-->
+    <add key="ExeptionsIfns" value="" />
+    <!--ИНН для исключения-->
+    <add key="WebSite" value="http://i7751-app127:8095/"/>
+    <add key="ServiceGetOrPost" value="http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais"/>
+    <!--Адрес сервиса-->
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="FastMember.Signed" publicKeyToken="9e8f22703bef9a29" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ClosedXML" publicKeyToken="fd1eb21b62ae805b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.91.0.0" newVersion="0.91.0.0" />
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0"/>
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
 </configuration>
