--- a/LibaryCommandPublic/LibaryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibaryCommandPublic.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AisPoco, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Nuget\Ais3Dll\AisPoco.dll</HintPath>
+    </Reference>
     <Reference Include="ClosedXML, Version=0.94.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ClosedXML.0.94.2\lib\net40\ClosedXML.dll</HintPath>
     </Reference>
@@ -77,11 +81,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestAutoit\Analitic\TheUserTask\AutoClikcsTask.cs" />
     <Compile Include="TestAutoit\It\Rule\ItRuleParse.cs" />
+    <Compile Include="TestAutoit\Okp2\RegisterDeclarations.cs" />
     <Compile Include="TestAutoit\Okp2\TaxJournal.cs" />
     <Compile Include="TestAutoit\Okp3\UsnSend\CommandUsn.cs" />
     <Compile Include="TestAutoit\Okp4\EditPravo\Pravo\CommandPravo.cs" />
     <Compile Include="TestAutoit\Okp4\SnuOneAuto\AutoCommand\AutoCklicsAisCommand.cs" />
     <Compile Include="TestAutoit\Orn\TaskOrn\TaskOrn.cs" />
+    <Compile Include="TestAutoit\PreCheck\ReportingMemo\ReportingMemoStart.cs" />
     <Compile Include="TestAutoit\PublicCommand\CommandFormirovanie.cs" />
     <Compile Include="TestAutoit\PublicCommand\CommandSnuOneAuto.cs" />
     <Compile Include="TestAutoit\RaschBydj\Migration\MigrationCKlikCommand.cs" />
