Создана оптимальная модель БД для данных подготовка к слиянию в master

--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -29,11 +29,12 @@
     <add key="PathJurnal" value="XmlJurnal/" /><!--Путь к журналам-->
     <add key="PathInn" value="XmlFile/" /><!--Путь к спискам значений-->
     <add key="ExcelReportFile" value="ExcelReport/" /><!--Путь к конвертированым отчетам!!!-->
-    <add key="PathPdfTemp" value="C:/Users/7751-00-450/AppData/Local/Temp/" /><!--Путь к PDF файлам!!!-->
+    <add key="PathPdfTemp" value="C:/Users/7751-00-099/AppData/Local/Temp/" /><!--Путь к PDF файлам!!!-->
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
     <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
     <add key="WebSite" value="http://i7751-app127:8095/"/>
-    <add key="ServiceGetOrPost" value="http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais"/> <!--Адрес сервиса-->
+    <add key="ServiceGetOrPost" value="http://I7751-W40204180:8050/ServiceAutomation/LoadModelPreCheck"/> <!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
+    <add key="BankSvedSave" value="D:\"/> <!--Путь сохранения выписок из банков-->
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
