--- a/EfDatabaseAutomationTests/EfDatabaseAutomationTests.csproj
+++ b/EfDatabaseAutomationTests/EfDatabaseAutomationTests.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AisPoco">
+      <HintPath>C:\Nuget\Ais3Dll\AisPoco.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Nuget\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
