--- a/ServiceAutomation/Web.config
+++ b/ServiceAutomation/Web.config
@@ -10,7 +10,7 @@
   </connectionStrings>
  
   <appSettings>
-
+    <add key="PathSaveTemplate" value="C:\Testing\Template\" />
   </appSettings>
 
   <system.web>
