--- a/LibaryXMLAuto/LibaryXMLAuto.csproj
+++ b/LibaryXMLAuto/LibaryXMLAuto.csproj
@@ -131,6 +131,9 @@
       <SubType>code</SubType>
       <DependentUpon>Reshenie.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ModelXmlSql\PreCheck\ModelCard\CardFace.cs">
+      <DependentUpon>CardFace.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ReadOrWrite\CreateElement\CreteElement.cs" />
     <Compile Include="ErrorJurnal\ErrorJurnal.cs" />
     <Compile Include="ErrorJurnal\OkJurnal.cs" />
@@ -230,6 +233,9 @@
     <None Include="ModelXmlSql\Model\Trebovanie\Reshenie.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="ModelXmlSql\PreCheck\ModelCard\CardFace.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Reports\AnalizNo\AnalizNo.xsd">
       <SubType>Designer</SubType>
@@ -278,6 +284,7 @@
       <XsdXmlMigration Include="ModelXmlAuto\ReportMigration\*.xsd" />
       <XsdXmlInspection Include="ModelXmlAuto\Inspection\*.xsd" />
       <XsdXmlOtdelRuleUsers Include="ModelXmlAuto\OtdelRuleUsers\*.xsd" />
+      <XsdXmlModelCard Include="ModelXmlSql\PreCheck\ModelCard\*.xsd" />
     </ItemGroup>
     <Message Importance="high" Text="CreateXsd" />
     <GetFrameworkSdkPath>
@@ -310,5 +317,6 @@
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdXmlMigration.FullPath)&quot; /classes /f /namespace:$(RootNamespace)ModelXmlAuto.MigrationReport /outputdir:ModelXmlAuto\ReportMigration\" />
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdXmlInspection.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlAuto.Inspection /outputdir:ModelXmlAuto\Inspection\" />
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdXmlOtdelRuleUsers.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlAuto.OtdelRuleUsers /outputdir:ModelXmlAuto\OtdelRuleUsers\" />
+    <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdXmlModelCard.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlSql.PreCheck.ModelCard /outputdir:ModelXmlSql\PreCheck\ModelCard\" />
   </Target>
 </Project>
