--- a/ServiceAutomation/ServiceAutomation.csproj
+++ b/ServiceAutomation/ServiceAutomation.csproj
@@ -46,6 +46,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AisPoco">
+      <HintPath>C:\Nuget\Ais3Dll\AisPoco.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>C:\Nuget\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -80,6 +83,9 @@
     <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Mvc">
+      <HintPath>C:\Nuget\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -93,6 +99,7 @@
     <Compile Include="LoginAD\XsdShemeLogin\LoginService.cs">
       <DependentUpon>LoginService.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ParametrConfig\ParametrConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
@@ -105,6 +112,10 @@
     <Compile Include="Service\ServiceAuto.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\My\LibaryDocumentGenerator\LibaryDocumentGenerator.csproj">
+      <Project>{939b256e-591b-40cc-8097-5d34456404cd}</Project>
+      <Name>LibaryDocumentGenerator</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\My\Loggers\Loggers.csproj">
       <Project>{9bac233e-ed3d-493e-b7f6-f26f8091968d}</Project>
       <Name>Loggers</Name>
@@ -112,6 +123,10 @@
     <ProjectReference Include="..\EfDatabaseAutomation\EfDatabaseAutomation.csproj">
       <Project>{fdad249d-cd7d-4581-b945-90d2f9dad698}</Project>
       <Name>EfDatabaseAutomation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LibaryXMLAuto\LibaryXMLAuto.csproj">
+      <Project>{a2bc3ae2-4a61-4e9e-9fa4-96a02677c79c}</Project>
+      <Name>LibaryXMLAuto</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
