--- a/ServiceAutomation/Web.config
+++ b/ServiceAutomation/Web.config
@@ -6,7 +6,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True"/>
+    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True" />
   </connectionStrings>
  
   <appSettings>
@@ -73,12 +73,12 @@
   </system.serviceModel>
 
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
     <!--
         Для просмотра корневого каталога веб-приложения во время отладки установите значение true.
         Перед развертыванием установите значение false, чтобы избежать раскрытия сведений в папке веб-приложения.
       -->
-    <directoryBrowse enabled="true"/>
+    <directoryBrowse enabled="true" />
   </system.webServer>
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
@@ -94,4 +94,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="8fb06cb64d019a17" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.8.1.0" newVersion="2.8.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
