--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -7,7 +7,8 @@
   </configSections>
   <connectionStrings>
     <add name="SQL" connectionString="Data Source=i7751-app001;Initial Catalog=Taxes51;Integrated Security=True;MultipleActiveResultSets=True" />
-    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=Automation;Integrated Security=True;MultipleActiveResultSets=True"/>
+    <add name="DatabaseAutomation" providerName="System.Data.SqlClient" connectionString="Data Source=i7751-app127;Initial Catalog=AutomationTest;Integrated Security=True;MultipleActiveResultSets=True"/>
+    <add name="BulkCopyXml" connectionString="provider=SQLOLEDB;data source=i7751-app127;database=AutomationTest;integrated security=SSPI"/>
   </connectionStrings>
   <appSettings>
     <add key="Ifns" value="7751" /><!--ИФНС для выборок-->
@@ -33,8 +34,10 @@
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
     <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
     <add key="WebSite" value="http://i7751-app127:8095/"/>
-    <add key="ServiceGetOrPost" value="http://I7751-W40204180:8050/ServiceAutomation/LoadModelPreCheck"/> <!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
+    <add key="ServiceGetOrPost" value="http://localhost:8050/ServiceAutomation/LoadModelPreCheck"/> <!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
     <add key="BankSvedSave" value="D:\"/> <!--Путь сохранения выписок из банков-->
+    <add key="PathXsdScheme" value="XsdShemeLoad/" /><!--Путь к Xsd схемам-->
+    <add key="PathDownloadTempXml" value="DownloadTempXml/" /><!--Выгрузка xml файлов-->
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
