--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -29,12 +29,13 @@
     <add key="PathJurnal" value="XmlJurnal/" /><!--Путь к журналам-->
     <add key="PathInn" value="XmlFile/" /><!--Путь к спискам значений-->
     <add key="ExcelReportFile" value="ExcelReport/" /><!--Путь к конвертированым отчетам!!!-->
-    <add key="PathPdfTemp" value="C:/Users/7751-00-099/AppData/Local/Temp/" /><!--Путь к PDF файлам!!!-->
+    <add key="PathPdfTemp" value="C:/Users/7751-00-247/AppData/Local/Temp/" /><!--Путь к PDF файлам!!!-->
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
     <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
     <add key="WebSite" value="http://i7751-app127:8095/"/>
-    <add key="ServiceGetOrPost" value="http://I7751-W40204180:8050/ServiceAutomation/LoadModelPreCheck"/> <!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
-    <add key="BankSvedSave" value="C:\Users\7751-00-099\Downloads\"/> <!--Путь сохранения выписок из банков-->
+    <add key="ServiceGetOrPost" value="http://localhost:8050/ServiceAutomation/LoadModelPreCheck"/> <!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
+    <add key="AllTemplate" value="http://localhost:8050/ServiceAutomation/LoadAllTemplateDb"/>
+    <add key="BankSvedSave" value="C:\Users\7751-00-247\Downloads\"/> <!--Путь сохранения выписок из банков-->
     <add key="PathXsdScheme" value="XsdShemeLoad/" /><!--Путь к Xsd схемам-->
     <add key="PathDownloadTempXml" value="DownloadTempXml/" /><!--Выгрузка xml файлов-->
   </appSettings>
