--- a/LibaryCommandPublic/LibraryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibraryCommandPublic.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestAutoit\Analitic\TheUserTask\AutoClikcsTask.cs" />
     <Compile Include="TestAutoit\It\Rule\ItRuleParse.cs" />
+    <Compile Include="TestAutoit\Okp1\RegisterDeclarations.cs" />
     <Compile Include="TestAutoit\Okp2\RegisterDeclarations.cs" />
     <Compile Include="TestAutoit\Okp2\TaxJournal.cs" />
     <Compile Include="TestAutoit\Okp3\UsnSend\CommandUsn.cs" />
