--- a/ViewModelLib/ViewModelLib.csproj
+++ b/ViewModelLib/ViewModelLib.csproj
@@ -114,11 +114,13 @@
     <Compile Include="ModelTestAutoit\PublicModel\LableAndErrorModel\LableModel.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\ModelDatePickerAdd\DatePickerAdd.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\PdfHelp\PdfHelp.cs" />
+    <Compile Include="ModelTestAutoit\PublicModel\PublicModelCollectionSelect\PublicModelCollectionSelect.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\QbeSelect\QbeClass.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\RaschetBuh\SelectVibor.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\ReportXlsx\ReportXlsx.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\ReportXml\ReportJurnalProperty.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\SelectBranch\Branch.cs" />
+    <Compile Include="ModelTestAutoit\PublicModel\TemplateModel\TemplateModel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModelPage\AnotherCommandImplementation.cs" />
@@ -135,6 +137,10 @@
     <None Include="ViewModelPage\packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AisPoco\AisPoco.csproj">
+      <Project>{ae019cef-782d-41b7-942f-420f3c1b434a}</Project>
+      <Name>AisPoco</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LibaryXMLAuto\LibaryXMLAuto.csproj">
       <Project>{a2bc3ae2-4a61-4e9e-9fa4-96a02677c79c}</Project>
       <Name>LibaryXMLAuto</Name>
