--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -13,8 +13,8 @@
   <appSettings>
     <add key="Ifns" value="7751" /><!--ИФНС для выборок-->
     <add key="Help" value="Help\AutomateAis3Full.pdf" /><!--Помощь пользователю-->
-    <add key="ServerReport" value="http://I7751-W40204180:8181/ServiceRest/MigrationError" /><!--Сервер создания отчетов по миграции Письма-->
-    <add key="ServerRuleUsersWordTemplate" value="http://I7751-W40204180:8181/ServiceRest/GenerateTemplateRule" /><!--Сервис создания заявок доступа на подпись-->
+    <add key="ServerReport" value="http://i7751-w40204180:8181/ServiceRest/MigrationError" /><!--Сервер создания отчетов по миграции Письма-->
+    <add key="ServerRuleUsersWordTemplate" value="http://i7751-w40204180:8181/ServiceRest/GenerateTemplateRule" /><!--Сервис создания заявок доступа на подпись-->
     <add key="FileFid" value="XmlFile/Fid.xml" /><!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
     <add key="FileFpd" value="XmlFile/Fpd.xml" /><!--Путь к файлу ФПД по схеме FpdReg.xsd-->
@@ -29,15 +29,16 @@
     <add key="PathJurnal" value="XmlJurnal/" /><!--Путь к журналам-->
     <add key="PathInn" value="XmlFile/" /><!--Путь к спискам значений-->
     <add key="ExcelReportFile" value="ExcelReport/" /><!--Путь к конвертированым отчетам!!!-->
-    <add key="PathPdfTemp" value="C:/Users/7751-00-247/AppData/Local/Temp/" /><!--Путь к PDF файлам!!!-->
+    <add key="PathPdfTemp" value="C:/Users/7751-00-481/AppData/Local/Temp/" /><!--Путь к PDF файлам!!!-->
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
     <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
     <add key="WebSite" value="http://i7751-app127:8095/"/>
-    <add key="ServiceGetOrPost" value="http://localhost:8050/ServiceAutomation/LoadModelPreCheck"/> <!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
-    <add key="AllTemplate" value="http://localhost:8050/ServiceAutomation/LoadAllTemplateDb"/>
-    <add key="BankSvedSave" value="C:\Users\7751-00-247\Downloads\"/> <!--Путь сохранения выписок из банков-->
+    <add key="ServiceGetOrPost" value="http://i7751-w40204180:8050/ServiceAutomation/LoadModelPreCheck"/> <!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
+    <add key="AllTemplate" value="http://i7751-w40204180:8050/ServiceAutomation/LoadAllTemplateDb"/>
+    <add key="BankSvedSave" value="C:\Users\7751-00-481\Downloads\"/> <!--Путь сохранения выписок из банков-->
     <add key="PathXsdScheme" value="XsdShemeLoad/" /><!--Путь к Xsd схемам-->
     <add key="PathDownloadTempXml" value="DownloadTempXml/" /><!--Выгрузка xml файлов-->
+    <add key="Sleepeng" value="2000"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
