--- a/EfDatabaseAutomation/packages.config
+++ b/EfDatabaseAutomation/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
+<packages xmlns="url:packages">
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
   <package id="Z.EntityFramework.Extensions" version="4.0.79" targetFramework="net452" />
