--- a/ServiceAutomation/packages.config
+++ b/ServiceAutomation/packages.config
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
+<packages xmlns="url:packages">
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
-  <package id="System.Diagnostics.EventLog" version="4.7.0" targetFramework="net472" />
-  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
-  <package id="System.ServiceProcess.ServiceController" version="4.7.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="System.Diagnostics.EventLog" version="4.7.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="System.ServiceProcess.ServiceController" version="4.7.0" targetFramework="net472" requireReinstallation="true" />
 </packages>
